--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,18 @@ main {
 }
 
 main h1{
+}
+
+/*header h1{
 	margin-top: 10vh;
 	text-align: center;
 	color: #ffffff;
+	display: none;
+}
+*/
+.title{
+	margin-top: 10vh;
+	text-align: center;
+	color: #ffffff;
+	display: none;
 }
