--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,73 @@
+body{
+	background-color: #030412;
+	margin: 0;
+	width: 100vw;
+	height: 100vh;
+}
+
 main {
 	font-family: 'arial black','arial','sans-serif','Impact';
 	/*text-orientation: upright;  すべて縦方向に表示 
 	writing-mode: vertical-rl;*/
-	background-color: #030412;
+	/*background-color: #030412;*/
 
 }
 
-main h1{
+header{
+	font-family: 'arial black','arial','sans-serif','Impact';
 }
 
-/*header h1{
-	margin-top: 10vh;
-	text-align: center;
-	color: #ffffff;
-	display: none;
+main{
+
 }
-*/
+
+h3{
+  text-align: center;
+  font-size: 30px;
+  margin: 15vh 10vh 5vh 10vh;
+}
+
 .title{
 	margin-top: 10vh;
 	text-align: center;
 	color: #ffffff;
-	display: none;
+	/*display: none;*/
+	opacity: 0;
 }
+.blank {
+	margin-top: 110vh;
+  	background-color: #ffffff;
+}
+.contents{
+
+}
+.p-box{
+	padding-top: 25px;
+	margin-bottom: 100px;
+	color: #ffffff;
+}
+
+
+@media screen and (max-width:480px){
+  .p-box{
+    padding-top: 10px;
+    margin-bottom: 50px;
+    color: #ffffff;
+  }
+}
+
+.p-margin{
+  	padding-top: 20px;
+}
+
+.p-box h3 {
+  	width: 50%;
+  	margin-left: 25%;
+}
+.p-box p {
+	width: 50%;
+	margin-left: 25%;
+}
+
+
+
