--- a/css/main.css
+++ b/css/main.css
@@ -39,12 +39,15 @@ h3{
   	background-color: #ffffff;
 }
 .contents{
-
+	width: 100vw;
+	height: 100%;
 }
 .p-box{
 	padding-top: 25px;
-	margin-bottom: 100px;
+	margin-bottom: 50vh;
 	color: #ffffff;
+	/*border-right: solid 3px #ffffff;
+	border-left :solid 3px #ffffff;*/
 }
 
 
