--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,8 @@ h3{
 	width: 80%;
   height: auto;
 	padding-top: 25px;
-	padding-bottom: 100px;
-	
+	padding-bottom: 25px;
+	text-align:center;
 	margin-bottom: 5vh;
 	margin-right: auto;
 	margin-left: auto;
@@ -85,6 +85,7 @@ h3{
     color: #ffffff;
     border-right: solid 3px #ffffff;
     border-left :solid 3px #ffffff;
+    text-align:center;
   }
 }
 
@@ -108,7 +109,18 @@ h3{
 
 .footer{
   width: 100vw;
-  height: 20vh;
+  height: 10vh;
 }
 
+.mov-container{
+  width: 100%;
+  height: auto;
+  margin-top: 0;
+}
 
+.backImg{
+  width: 60vw;
+  height: auto;
+  margin: 0 auto;
+  text-align:center;
+}
