--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,16 @@
+* {
+  margin: 0px;
+  padding: 0px;
+
+}
+
 body{
 	background-color: #030412;
+  padding: 0;
 	margin: 0;
 	width: 100vw;
 	height: 100vh;
+  overflow-x: hidden;
 }
 
 main {
@@ -10,6 +18,7 @@ main {
 	/*text-orientation: upright;  すべて縦方向に表示 
 	writing-mode: vertical-rl;*/
 	/*background-color: #030412;*/
+  margin: 0;
 
 }
 
