--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,15 @@
 
 }
 
+@font-face {
+	font-family: 'Futura1';
+	src:url('../assets/font/Futura-Bold-03.ttf');
+}
+@font-face {
+	font-family: 'Futura2';
+	src:url('../assets/font/Futura-Medium-01.ttf');
+}
+
 body{
 	background-color: #030412;
   padding: 0;
@@ -14,11 +23,11 @@ body{
 }
 
 main {
-	font-family: 'arial black','arial','sans-serif','Impact';
+	font-family: 'Futura1','Futura2','arial black','arial','sans-serif','Impact';
 	/*text-orientation: upright;  すべて縦方向に表示 
 	writing-mode: vertical-rl;*/
 	/*background-color: #030412;*/
-  margin: 0;
+  	margin: 0;
 
 }
 
