--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,7 @@ h3{
 	width: 100vw;
 	height: 100%;
 }
+
 .p-box{
 	width: 80%;
   height: auto;
@@ -113,6 +114,12 @@ h3{
 
 .p-margin{
   	padding-top: 20px;
+}
+
+.headingImg{
+  width: 80%;
+  height: auto;
+  margin: 0 auto;
 }
 
 .p-box h3 {
