--- a/css/comp.css
+++ b/css/comp.css
@@ -14,7 +14,7 @@
 }
 
 body{
-	background-color: #030412;
+	/*background-color: #030412;*/
 /*  background-image : url(../assets/image/top.png);
   background-position: center center;
   background-repeat: no-repeat;
@@ -52,130 +52,4 @@ main {
     display: none;
 }*/
 
-h3{
-  text-align: center;
-  font-size: 30px;
-  margin: 15vh 10vh 5vh 10vh;
-  border-bottom: groove #ff0000;
-}
-a {
-  text-decoration: none;
-  color: black;
-}
-/*ul {
-  list-style: none;
-  float:left;
-}*/
-ul.foo {
-    display:table;
-    table-layout:fixed;
-    width:80%;
-    margin:auto;
-    margin-top: 2vh;
-    margin-bottom: 0;
-}
-ul.foo li {
-    width:35%;
-    max-width: 50%;
-    display:table-cell;
-    vertical-align:middle;
-    text-align:center;
-    /*background-color:red;
-    border-left:1px solid white;
-    border-right:1px solid white;
-    margin: 10vw;*/
-    
-}
-ul.foo p {
-    text-align:center;
-    /*background-color:red;*/
-    border-left:1px solid white;
-    border-right:1px solid white;
-    margin: 0 2vw;
-    
-}
-.btn-sf-like1{
-  background-color:red;
-}
-.btn-sf-like2, .btn-sf-like3, .btn-sf-like0{
-  background-color:#565656;
-}
-
-.title {
-  color:black;
-  position: fixed;
-  width: 80%;
-  max-width: 80%;
-  height: auto;
-  margin: 0 auto;
-  /*margin-top: 7vw;*/
-  padding: 5vh 10% 0vh 10%;
-  border-bottom: groove #000000;
-  opacity: 0;
-}
-
-@media screen and (max-width: 480px) { 
-  .title {
-    color:black;
-    position: fixed;
-    width: 80%;
-    max-width: 80%;
-    height: auto;
-    margin: 0 auto;
-    /*margin-top: 2vw;*/
-    padding: 3vh 10% 0vh 10%;
-    border-bottom: groove #000000;
-    opacity: 0;
-  }
-}
-
-
-.blank {
-	margin-top: 102vh;
-  background-color: #ffffff;
-}
-.contents{
-	width: 100%;
-  max-width: 100%;
-	height: auto;
-}
-
-.p-box{
-	width: 80%;
-  max-width: 80%;
-  height: auto;
-  position: relative;
-	padding-top: 25px;
-	padding-bottom: 25px;
-  padding-left: 0;
-  padding-right: 0;
-	text-align:center;
-	margin-bottom: 5vh;
-	margin-right: auto;
-	margin-left: auto;
-	color: #ffffff;
-	border-right: solid 3px #ffffff;
-	border-left :solid 3px #ffffff;
-}
-
-
-@media screen and (max-width:480px){
-  .p-box{
-  	width: 80%;
-    max-width: 80%;
-    height: auto;
-    position: relative;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-left: 0;
-    padding-right: 0;
-    text-align:center;
-    margin-bottom: 5vh;
-    margin-right: auto;
-    margin-left: auto;
-    color: #ffffff;
-    border-right: solid 3px #ffffff;
-    border-left :solid 3px #ffffff;
-  }
-}
 
