--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,7 @@ ul.foo p {
 .btn-sf-like2, .btn-sf-like3, .btn-sf-like0{
   background-color:#565656;
 }
+
 .title {
   position: fixed;
   width: 100%;
@@ -146,7 +147,7 @@ ul.foo p {
 
 .p-box{
 	width: 80%;
-  max-width: 80%;
+  max-width: 600px;
   height: auto;
   position: relative;
 	padding-top: 25px;
@@ -246,8 +247,14 @@ ul.foo p {
 
 .p-box h3 {
   	width: 90%;
-    max-width: 80%;
+    max-width: 500px;
   	margin: 0 auto;
+}
+@media screen and (max-width:480px){
+  .p-box h3 {
+    width: 90%;
+    max-width: 80%;
+  }
 }
 .p-box p {
 	width: 80%;
@@ -341,7 +348,7 @@ ul.foo p {
 }
 
 .backImg{
-  width: 50vw;
+  width: 50%;
   height: auto;
   margin: 0 auto;
   margin-top: 5vh;
