--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ ul.foo p {
     border-left :solid 3px #ffffff;
   }
 }
-
+/*
 .p-box:before{
   content: "";
   border-right: solid 3px  #00E7D8;
@@ -224,7 +224,7 @@ ul.foo p {
   left: 0;
   width: calc(100% + 4px);
   height: 100%;
-}
+}*/
 
 
 .p-box p.roundText{
