--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ ul.foo p {
 
 .p-box:after{
   content: "";
-  border-right: solid 3px #F27B00;
+  border-right: solid 3px #00E7D8;
   position: absolute;
   top: 0;
   left: 0;
