--- a/css/comp.css
+++ b/css/comp.css
@@ -4,25 +4,8 @@
 
 }
 
-#loading {
-  width: 100%;
-  height: 100%;
-  /*background-color: #fff;*/
-  position: relative;
-  z-index: 10;
-}
-#loading img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: auto;
-  transform: translate(-50%, -50%);
-  z-index: 10;
-}
-
-.hidden {
-  display: none;
+.pace-running .wrapper {
+    display: none;
 }
 
 /*@font-face {
