--- a/css/comp.css
+++ b/css/comp.css
@@ -7,6 +7,14 @@
 .pace-running .wrapper {
     display: none;
 }
+.pace-running{
+    background-image: url(../assets/image/mv.jpg);
+    background-repeat:  no-repeat;                         /* 画像の繰り返しを指定  */              
+    background-position:center center;                     /* 画像の表示位置を指定  */
+    background-size:contain;                               /* 画像のサイズを指定    */
+    width:100%;                                            /* 横幅のサイズを指定    */
+    height:auto;
+}
 
 /*@font-face {
 	font-family: 'Futura1';
