--- a/css/main.css
+++ b/css/main.css
@@ -328,11 +328,23 @@ ul.foo p {
   width:calc((100% / 3 ) + 2vw);
   height:calc(90% / 7);
   margin-right: calc(100% / 3);
+  margin-bottom: 2vh;
+  margin-top:  1vh;
 }
-.member{
+.member01{
   width:calc(100% / 3);
   height:calc(90% / 7);
   margin-right: 0;
+  margin-top:  4vh;
+  margin-bottom: 2vh;
+}
+
+.member02{
+  width:calc(100% / 3);
+  height:calc(90% / 7);
+  margin-right: 0;
+  margin-top:  2vh;
+  margin-bottom: 2vh;
 }
 .memberImg {
   width:80%;
