--- a/css/comp.css
+++ b/css/comp.css
@@ -8,7 +8,7 @@
     display: none;
 }
 .pace-running{
-    background-image: url(../assets/image/mv.jpg);
+    background-image: url(../assets/image/mv.jp2);
     background-repeat:  no-repeat;                         /* 画像の繰り返しを指定  */              
     background-position:center center;                     /* 画像の表示位置を指定  */
     background-size:contain;                               /* 画像のサイズを指定    */
