--- a/css/comp.css
+++ b/css/comp.css
@@ -8,7 +8,7 @@
     display: none;
 }
 .pace-running{
-    background-image: url(../assets/image/mv.jp2);
+    background-image: url(https://nekoshiro046.github.io/uraImg/image/mv.jp2);
     background-repeat:  no-repeat;                         /* 画像の繰り返しを指定  */              
     background-position:center center;                     /* 画像の表示位置を指定  */
     background-size:contain;                               /* 画像のサイズを指定    */
@@ -42,6 +42,9 @@ header{
   height: 100%
   z-index:2;
 }
+#imgBox{
+
+}
 .dataImg{
   width: 100%;
   height: 100vh;
@@ -51,7 +54,7 @@ header{
   left: 0;
 }
 .dataCompImg{
-  width: 80%;
+  width: 100%;
   max-width: 600px;
   height: auto;
   max-height: 100vh;
